# brunnr

./: .gitignore  CHANGELOG.md  Dockerfile.scanner  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json
brunnr/: __init__.py  assertions.py  cli.py  discovery.py  frontmatter.py  lockfile.py  registry.py  scanner.py
buildlog/: 2026-03-11-brunnr-v01-launch.md
docs/: getting-started.md  index.md  requirements.txt  roadmap.md
reviews/: agents-dont-learn-bragi-review-v2.md  agents-dont-learn-bragi-review.md  ax-01a-agent-has-opinions-bragi-review.md  ax-04-tool-descriptions-bragi-review.md  ax-series-bragi-review.md  context-engineering-not-copywriting-bragi-review-v2.md  context-engineering-not-copywriting-bragi-review.md  double-agent-problem-bragi-review.md  feedback-loop-retrieval-learns-bragi-review-v2.md  feedback-loop-retrieval-learns-bragi-review.md  learning-is-not-memory-bragi-review.md  linwheel-hunter-input.md  makes-it-look-easy-bragi-review-v2.md  makes-it-look-easy-bragi-review.md  parking-lot-pipeline-bragi-review.md  productionizing-hunter-bragi-review.md  qortex-integration-benchmarks-bragi-review-v2.md  qortex-integration-benchmarks-bragi-review.md  recursive-dogfood-bragi-review.md  silent-plugin-bragi-review.md  sixteen-thousand-lines-of-wrong-bragi-review-v2.md  sixteen-thousand-lines-of-wrong-bragi-review.md  two-ships-qortex-distributed-bragi-review-v2.md  two-ships-qortex-distributed-bragi-review.md  walls-come-first-bragi-review-v2.md  walls-come-first-bragi-review.md
scripts/: generate_skill_pages.py  (+1 more)
(+165 files in other folders)
